--- a/git/albumify/log.html
+++ b/git/albumify/log.html
@@ -18,7 +18,7 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
-<tr><td>2016-04-18 19:50</td><td><a href="commit/4b6171231c2083ce2741f247fd2d3b10de048877.html">fix delte frame button</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
+<tr><td>2016-04-18 19:50</td><td><a href="commit/9db71f5961ad4a0d1f868dc987ea4da7bd40ce5f.html">fix delete frame button</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-1</td></tr>
 <tr><td>2016-02-27 15:41</td><td><a href="commit/9724e0096664bab091079e9addaacee23ca738fc.html">Added webm support</a></td><td>Tudor</td><td class="num">2</td><td class="num">+8</td><td class="num">-2</td></tr>
 <tr><td>2016-02-21 10:09</td><td><a href="commit/03040689513aa40e2585fd21e7b1b23a25546b03.html">Gone legal</a></td><td>Tudor</td><td class="num">1</td><td class="num">+18</td><td class="num">-0</td></tr>
 <tr><td>2016-02-19 18:52</td><td><a href="commit/f2ff25cbd09b1b50d6d34c700758a412633f8523.html">Made the javascript work for older browsers</a></td><td>Tudor</td><td class="num">2</td><td class="num">+9</td><td class="num">-9</td></tr>
