--- a/git/disputils/log.html
+++ b/git/disputils/log.html
@@ -18,6 +18,11 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-04-21 21:29</td><td><a href="commit/79cff965f5e05658a6fbd80e9c07228ee8395031.html">chore: bsd3</a></td><td>ix</td><td class="num">1</td><td class="num">+26</td><td class="num">-9</td></tr>
+<tr><td>2016-04-21 20:28</td><td><a href="commit/bdf95fd69939ebfc437ddfe013f618250827fb00.html">docs: remove warning about obsolescence</a></td><td>ix</td><td class="num">1</td><td class="num">+0</td><td class="num">-6</td></tr>
+<tr><td>2016-04-21 18:34</td><td><a href="commit/1eb40069a41f11874151478917ced55e503e5f39.html">randr: fix sizeof to char</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-1</td></tr>
+<tr><td>2016-04-21 18:32</td><td><a href="commit/bc3733ebe1fa7654d635dcd6510ef9157ef72221.html">randr: fix get_output_name</a></td><td>Tudor</td><td class="num">2</td><td class="num">+17</td><td class="num">-9</td></tr>
+<tr><td>2016-04-20 21:30</td><td><a href="commit/b003bd4c600794bc7b3f9ef307e7e8a952dbb667.html">fix (in a dirty way): lsd showing strange characters</a></td><td>Tudor</td><td class="num">1</td><td class="num">+14</td><td class="num">-5</td></tr>
 <tr><td>2016-04-19 14:10</td><td><a href="commit/43083766b8d1dd37f3d94619948e9f065daf12a4.html">dattr: get rid of unused variable warning</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-0</td></tr>
 <tr><td>2016-04-18 19:15</td><td><a href="commit/b9048f852451cc0949fb03c5ebafde038adfb91c.html">dattr: remove spaces from output</a></td><td>Tudor</td><td class="num">1</td><td class="num">+4</td><td class="num">-4</td></tr>
 <tr><td>2016-04-18 16:35</td><td><a href="commit/4f468d5f5cae93c217288762823a79b5147f7246.html">randr.c: cleaned get_output_name</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-4</td></tr>
