--- a/git/disputils/refs.html
+++ b/git/disputils/refs.html
@@ -19,7 +19,7 @@
 <tr><td>Name</td><td>Last commit date</td><td>Author</td>
 </tr>
 </thead><tbody>
-<tr><td>master</td><td>2016-04-19 14:10</td><td>Tudor</td></tr>
+<tr><td>master</td><td>2016-04-21 21:29</td><td>ix</td></tr>
 </tbody></table><br/></div>
 </body>
 </html>
