--- a/git/disputils/file/lsd.c.html
+++ b/git/disputils/file/lsd.c.html
@@ -15,7 +15,7 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a> | <a href="../file/README.html">README</a> | <a href="../file/LICENSE.html">LICENSE</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> lsd.c (1492B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> lsd.c (1610B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -78,6 +78,8 @@
 <a href="#l60" id="l60">60</a>
 <a href="#l61" id="l61">61</a>
 <a href="#l62" id="l62">62</a>
+<a href="#l63" id="l63">63</a>
+<a href="#l64" id="l64">64</a>
 </pre></td><td><pre>
 /* disputils lsd.c 04/15/2016 tudurom &lt;xenogenesis@openmailbox.org&gt;
  * ix &lt;arcetera@openmailbox.org
@@ -101,11 +103,10 @@ usage(char *name)
 }
 
 void
-print_output(xcb_connection_t* conn, xcb_randr_output_t output)
+print_output(xcb_connection_t* conn, xcb_randr_output_t output, xcb_randr_get_output_info_reply_t* output_info)
 {
     if (get_output_connection(conn, output) == 0) {
-        const char* name = get_output_name(conn, output);
-        printf(&quot;%s\n&quot;, name);
+        printf(&quot;%s&quot;, get_output_name(conn, output));
     }
 }
 
@@ -135,8 +136,11 @@ main(int argc, char *argv[])
             output_info = get_output_info(conn, os[j]);
             output_crtc_info = get_output_crtc_info(conn, output_info-&gt;crtc);
             /* Print screen only if in use */
-            if (output_crtc_info != NULL)
-                print_output(conn, os[j]);
+            if (output_crtc_info != NULL) {
+                print_output(conn, os[j], output_info);
+                if (j &lt; o_len - 1)
+                    fputc(&apos;\n&apos;, stdout);
+            }
         }
     }
     return 0;
