new page and new project

--- a/git/textual/file/demo/style.css.html
+++ b/git/textual/file/demo/style.css.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> style.css (166B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> style.css (192B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -27,13 +27,15 @@
 <a href="#l9" id="l9">9</a>
 <a href="#l10" id="l10">10</a>
 <a href="#l11" id="l11">11</a>
+<a href="#l12" id="l12">12</a>
 </pre></td><td><pre>
 td {
     padding: 0px;
 }
 
 table {
-    border-spacing: 1px;
+    border-spacing: 0px;
+    border-style: hidden;
     border-collapse: separate;
     border-width: 0px;
     font-family: monospace;
