--- a/whoami/whoami.html
+++ b/whoami/whoami.html
@@ -1,21 +1,14 @@
   <!DOCTYPE html>
 <html>
   <head>
-    <title>tudor's swamp</title>
+    <title>tudurom</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <main>
-    <h1>tudor roman</h1>
-<h2>known in the wild as tudurom</h2>
-<p>
-  <a href="/whoami">whoami</a>
-  <a href="/git">code</a>
-  <a href="/blog">blog</a>
-  <a href="/cow">cow</a>
-</p>
+    
       </main>
   </body>
 </html>
