--- a/git/dotfiles/file/scripts/.scripts/wm.html
+++ b/git/dotfiles/file/scripts/.scripts/wm.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> wm (51B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> wm (49B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -25,7 +25,7 @@
 #! /bin/bash
 
 while true; do
-  bspwm || break
+  cwm || break
 done
 </pre></td></tr></table>
 </div>
