--- a/git/dotfiles/file/wmrc/.scripts/notifyd.html
+++ b/git/dotfiles/file/wmrc/.scripts/notifyd.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> notifyd (1049B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> notifyd (1042B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -75,7 +75,7 @@ DISPLAY_W=&quot;$(dattr -w `ppd`)&quot;
 DISPLAY_H=&quot;$(dattr -h `ppd`)&quot;
 
 NOTIFY_W=&quot;$(( 110 + 2 * GENERAL_GAP ))&quot;
-NOTIFY_H=&quot;$(( 5 + 2 * GENERAL_GAP  ))&quot;
+NOTIFY_H=&quot;$PANEL_STATUS_HEIGHT&quot;
 NOTIFY_X=&quot;$(( DISPLAY_X + DISPLAY_W - NOTIFY_W - GENERAL_GAP ))&quot;
 NOTIFY_Y=&quot;$(( DISPLAY_Y + DISPLAY_H - NOTIFY_H - GENERAL_GAP ))&quot;
 
