--- a/git/dotfiles/file/wmrc/.scripts/panelsrc.html
+++ b/git/dotfiles/file/wmrc/.scripts/panelsrc.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> panelsrc (306B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> panelsrc (303B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -31,7 +31,7 @@
 # (c) tudurom 2016 - wtfpl
 
 #export PANEL_FONT=&quot;-*-erusfont-medium-*-*-*-11-*-*-*-*-*-*-*&quot;
-export PANEL_FONT=&quot;-*-gohufont-medium-*-*-*-11-*-*-*-*-*-*-*&quot;
+export PANEL_FONT=&quot;-*-lemon-medium-*-*-*-10-*-*-*-*-*-*-*&quot;
 export PANEL_ICON_FONT=&quot;-wuncon-siji-medium-*-*-*-10-*-*-*-*-*-*-*&quot;
 
 export PANEL_STATUS_HEIGHT=&quot;30&quot;
