--- a/git/dotfiles/file/xdg/.config/user-dirs.dirs.html
+++ b/git/dotfiles/file/xdg/.config/user-dirs.dirs.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> user-dirs.dirs (237B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> user-dirs.dirs (231B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -26,11 +26,11 @@
 </pre></td><td><pre>
 XDG_DESKTOP_DIR=&quot;/dev/null&quot;
 XDG_DOWNLOAD_DIR=&quot;$HOME/tmp/downloads&quot;
-XDG_MUSIC_DIR=&quot;$HOME/media/music&quot;
-XDG_PICTURES_DIR=&quot;$HOME/media/images&quot;
+XDG_MUSIC_DIR=&quot;$HOME/usr/music&quot;
+XDG_PICTURES_DIR=&quot;$HOME/usr/images&quot;
 XDG_PUBLICSHARE_DIR=&quot;/dev/null&quot;
 XDG_TEMPLATES_DIR=&quot;/dev/null&quot;
-XDG_VIDEOS_DIR=&quot;$HOME/media/videos&quot;
+XDG_VIDEOS_DIR=&quot;$HOME/usr/videos&quot;
 </pre></td></tr></table>
 </div>
 </body>
