--- a/git/dotfiles/file/wmrc/.scripts/groupbar.html
+++ b/git/dotfiles/file/wmrc/.scripts/groupbar.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> groupbar (2320B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> groupbar (2317B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -106,7 +106,7 @@
 <a href="#l88" id="l88">88</a>
 <a href="#l89" id="l89">89</a>
 </pre></td><td><pre>
-#!/bin/sh -x
+#!/bin/sh
 
 ppd=`ppd`
 DISP_W=`dattr -w $ppd`
