--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,7 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-05-14 10:20</td><td><a href="commit/ff50cc8d71b89e2eaf92b91b21621eb790c90ff4.html">cleanup</a></td><td>Tudor</td><td class="num">12</td><td class="num">+12</td><td class="num">-116</td></tr>
 <tr><td>2016-05-13 11:12</td><td><a href="commit/906e5c7859dfc45c436fc1f0ab5559520892a989.html">cwm now</a></td><td>Tudor</td><td class="num">13</td><td class="num">+28</td><td class="num">-21</td></tr>
 <tr><td>2016-05-10 18:55</td><td><a href="commit/861ec2e81ff39274d847c68e139385644d3664db.html">upd8</a></td><td>Tudor</td><td class="num">19</td><td class="num">+213</td><td class="num">-245</td></tr>
 <tr><td>2016-05-07 21:07</td><td><a href="commit/dcb8432b32267dcb3de909731f3bc4f95e5b9ef9.html">fix ruby path</a></td><td>Tudor</td><td class="num">2</td><td class="num">+3</td><td class="num">-1</td></tr>
