--- a/git/textual/file/README.md.html
+++ b/git/textual/file/README.md.html
@@ -15,20 +15,28 @@
 <a href="../log.html">Log</a> | <a href="../files.html">Files</a> | <a href="../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> README.md (65B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> README.md (109B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
 <a href="#l4" id="l4">4</a>
 <a href="#l5" id="l5">5</a>
 <a href="#l6" id="l6">6</a>
+<a href="#l7" id="l7">7</a>
+<a href="#l8" id="l8">8</a>
+<a href="#l9" id="l9">9</a>
+<a href="#l10" id="l10">10</a>
 </pre></td><td><pre>
 textual
 =======
 
 ASCII interface library in JS.
 
-Mostly buttons.
+Features
+--------
+
+* Table based layout
+* Clickable buttons
 </pre></td></tr></table>
 </div>
 </body>
