--- a/git/textual/file/src/button.js.html
+++ b/git/textual/file/src/button.js.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> button.js (1209B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> button.js (1377B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -57,6 +57,10 @@
 <a href="#l39" id="l39">39</a>
 <a href="#l40" id="l40">40</a>
 <a href="#l41" id="l41">41</a>
+<a href="#l42" id="l42">42</a>
+<a href="#l43" id="l43">43</a>
+<a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
 </pre></td><td><pre>
 var Textual = Textual || {};
 
@@ -67,12 +71,15 @@ Textual.Button = function (table, str, x, y, width, height) {
     this._w = width;
     this._h = height;
 
+    // Put top part of the button
     table.putStr(&quot;.&quot; + &quot;-&quot;.repeat(width - 2) + &quot;.&quot;, x, y);
+    // Complete with middle segments
     for (var i = 1; i &lt; height - 1; i++) {
         table.putStr(&quot;|&quot; + &quot; &quot;.repeat(width - 2) + &quot;|&quot;, x, y + i);
     }
+    // Put bottom part
     table.putStr(&quot;&apos;&quot; + &quot;-&quot;.repeat(width - 2) + &quot;&apos;&quot;, x, y + height - 1);
-
+    // Put text in the middle
     var textX = ((width - str.length) / 2) | 0;
     var textY = ((height - 1) / 2) | 0;
     table.putStr(str, x + textX, y + textY);
@@ -88,6 +95,7 @@ Textual.Button.prototype.attachHandler = function(handler) {
     }
 };
 
+// Return cell objects present in the button
 Textual.Button.prototype.getCells = function() {
     var self = this;
 
