--- a/git/textual/log.html
+++ b/git/textual/log.html
@@ -18,6 +18,8 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-05-14 10:15</td><td><a href="commit/cf9f574bd81ee64b33057001bbaf77bddfa1b7a0.html">readme</a></td><td>Tudor</td><td class="num">1</td><td class="num">+5</td><td class="num">-1</td></tr>
+<tr><td>2016-05-14 10:12</td><td><a href="commit/dcc42fdbdee2ce7a1b925466bd84d73c80e718c3.html">clean</a></td><td>Tudor</td><td class="num">2</td><td class="num">+23</td><td class="num">-19</td></tr>
 <tr><td>2016-05-13 13:22</td><td><a href="commit/9f52c6120c2ab1e0b20b33473c3accba725f28ad.html">fix spacing</a></td><td>Tudor</td><td class="num">1</td><td class="num">+2</td><td class="num">-1</td></tr>
 <tr><td>2016-05-13 13:05</td><td><a href="commit/d91939d29493bc42755d9a71bea8627a93aed8f1.html">init</a></td><td>Tudor</td><td class="num">7</td><td class="num">+241</td><td class="num">-0</td></tr>
 </tbody></table></div>
